# NeuroNet

./: .gitignore  MANIFEST.in  NeuroNet.py  README.md  config.py  observer.py  pipeline.py  pyproject.toml
neuronet/: __init__.py  config.py  neuronet.py  observer.py  pipeline.py
src/neuronet/: observer.py
